--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,69 @@
     "configurations": [
 
         {
-            "name": "Debug",
-            "type": "gdb",
+            "name": "C++ Launch",
+            "type": "cppdbg",
             "request": "launch",
-            "target": "${workspaceRoot}/gctest/test",
+            "program": "${workspaceRoot}/gctest/test",
+            "args": [],
+            "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
-            "terminal": "",
-            "preLaunchTask": "buildTest"
+            "environment": [],
+            "externalConsole": true,
+            "preLaunchTask": "buildTest",
+            "linux": {
+                "MIMode": "gdb",
+                "setupCommands": [
+                    {
+                        "description": "Enable pretty-printing for gdb",
+                        "text": "-enable-pretty-printing",
+                        "ignoreFailures": true
+                    }
+                ]
+            },
+            "osx": {
+                "MIMode": "lldb"
+            },
+            "windows": {
+                "MIMode": "gdb",
+                "setupCommands": [
+                    {
+                        "description": "Enable pretty-printing for gdb",
+                        "text": "-enable-pretty-printing",
+                        "ignoreFailures": true
+                    }
+                ]
+            }
+        },
+        {
+            "name": "C++ Attach",
+            "type": "cppdbg",
+            "request": "attach",
+            "program": "enter program name, for example ${workspaceRoot}/a.out",
+            "processId": "${command:pickProcess}",
+            "linux": {
+                "MIMode": "gdb",
+                "setupCommands": [
+                    {
+                        "description": "Enable pretty-printing for gdb",
+                        "text": "-enable-pretty-printing",
+                        "ignoreFailures": true
+                    }
+                ]
+            },
+            "osx": {
+                "MIMode": "lldb"
+            },
+            "windows": {
+                "MIMode": "gdb",
+                "setupCommands": [
+                    {
+                        "description": "Enable pretty-printing for gdb",
+                        "text": "-enable-pretty-printing",
+                        "ignoreFailures": true
+                    }
+                ]
+            }
         }
     ]
 }
