--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceRoot}/gctest/test",
+            //"program": "${workspaceRoot}/generated/linux/debug/64/unittest/test_runner",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceRoot}",
